[project]
name = "ember-agents"
version = "0.1.0"
description = "The Ember AI agent swarm for intent based cognition and reasoning."
authors = [
    {name = "Tom Daniel", email = "0xtomdaniel@gmail.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "semantic-router>=0.0.14",
    "pydantic>=1.10.13",
    "guidance>=0.1.10",
    "pyautogen>=0.2.6",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.2",
    "httpx[http2]>=0.26.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode="auto"

[tool.pdm]
package-type = "application"

[tool.pdm.scripts]
#start = "flask run -p 54321"
start = "uvicorn --app-dir src ember_agents.main:app --host 0.0.0.0 --port 8101"
dev = "uvicorn --app-dir src ember_agents.main:app --host 0.0.0.0 --port 8101 --reload"
test = "pytest -s"
error = "sleep 2 && echo 'exiting with error...' && exit 1"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
]
code-analysis = [
    "ruff>=0.1.9",
]
