[project]
name = "ember-agents"
version = "0.1.0"
description = "The Ember AI agent swarm for intent based cognition and reasoning."
authors = [{ name = "Tom Daniel", email = "0xtomdaniel@gmail.com" }]
dependencies = [
    "setuptools",
    "python-dotenv>=1.0.0",
    "semantic-router>=0.0.14",
    "pydantic>=1.10.13",
    "guidance>=0.1.10",
    "pyautogen>=0.2.6",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.2",
    "httpx[http2]>=0.26.0",
    "pinecone-client>=3.2.0",
    "langchain>=0.1.13",
    "langchain-text-splitters>=0.0.1",
    "tiktoken>=0.6.0",
    "numpy>=1.26.0"
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
#start = "flask run -p 54321"
start = "uvicorn --app-dir src ember_agents.main:app --host 0.0.0.0 --port 8101"
dev = "uvicorn --app-dir src ember_agents.main:app --host 0.0.0.0 --port 8101 --reload"
test = "pytest -s"
error = "bash -c 'sleep 2 && echo 'exiting with error...' && exit 1'"
lint = "bash -c 'black . && ruff format'"

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.4", "pytest-asyncio>=0.23.3"]
lint = ["ruff>=0.3.5", "black>=24.3.0"]

[tool.black]
target-version = ["py311"]
line-length = 88
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "B027",
    "FBT003",
    "S105",
    "S106",
    "S107",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "T201",
    "ARG001",
    "ARG002",
    "E501",
    "RUF200",
    "S101",
    "ISC001",
]
unfixable = ["F401"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
