[project]
name = "ember-agents"
version = "0.1.0"
description = "The Ember AI agent swarm for intent based cognition and reasoning."
authors = [{ name = "Tom Daniel", email = "0xtomdaniel@gmail.com" }]
dependencies = [
    "fastapi>=0.109.0",
    "httpx[http2]>=0.26.0",
    "langchain>=0.2.12",
    "langchain-text-splitters>=0.0.1",
    "pinecone-client>=3.2.0",
    "pyautogen>=0.2.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.2.1",
    "semantic-router>=0.0.14",
    "setuptools",
    "sse-starlette>=1.8.2",
    "uvicorn[standard]>=0.27.0",
    "tiktoken>=0.6.0",
    "multidict>=6.0.5",
    "fireworks-ai>=0.14.0",
    "rapidfuzz>=3.9.4",
    "openai>=1.35.13",
    "web3>=6.20.0",
    "langgraph>=0.2.45",
    "langchain-core>=0.2.29",
    "defusedxml>=0.7.1",
    "rich>=13.7.1",
    "solders>=0.23.0",
    "solana>=0.36.1",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn ember_agents.main:app --host 0.0.0.0 --port 8000 --reload"
test = "pytest -s"
"lint:fix" = "bash -c 'black . && ruff check --fix .'"
"lint:check" = "bash -c 'black --check . && ruff check .'"

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.4", "pytest-asyncio>=0.23.3"]
lint = ["ruff>=0.3.5", "black>=24.3.0"]

[tool.black]
target-version = ["py311"]
line-length = 88
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["ember_agents/project_directory", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "B027",
    "FBT003",
    "S105",
    "S106",
    "S107",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "T201",
    "ARG001",
    "ARG002",
    "E501",
    "RUF200",
    "S101",
    "ISC001",
]
unfixable = ["F401"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[build-system]
requires = ["pdm-pep517==2.15.4"]
build-backend = "pdm.pep517.api"
